# cobot

./: .gitignore  .gitmodules  404.html  LICENSE  README.md  handeye_calibration.json  handeye_calibration_params.json  index.html  search.html
.devcontainer/: Dockerfile  README.md  bashrc  devcontainer.json
.github/workflows/: deploy_pages.yml  docker-image.yml  main.yml
cobot_configuration/: index.html
cobot_hardware/: index.html
cobot_model_overview/: index.html
cobot_trajectory_controller/: index.html
controller_manager/: index.html
doc/: howToVNC.md  howToXpra.md  mkdocs.yml
doc/docs/: cobot_configuration.md  cobot_hardware.md  cobot_model_overview.md  cobot_trajectory_controller.md  controller_manager.md  howToVNC.md  howToXpra.md  index.md  launch_files.md  offline_hand_eye.md  planner_evaluation.md  quickstart.md
doc/docs/cobot_model/: cobot_modelling.ipynb
doc/docs/cobot_model/cobot_modelling/: img
examples/: simple_ros_example.usd
gui_overview/: index.html
howToVNC/: index.html
howToXpra/: index.html
launch_files/: index.html
offline_hand_eye/: index.html
planner_evaluation/: index.html
quickstart/: index.html
scripts/: Dockerfile  README.md  build_doc.sh  docker_configuration.sh  docker_installation.sh  pre-installation.sh
search/: search_index.json
src/cobot_calibration/: README.md  package.xml  setup.cfg  setup.py
src/cobot_calibration/launch/: calib_publish.launch  calib_run.launch
src/cobot_controller_manager/: CMakeLists.txt  cobot_controller_plugins.xml  package.xml
src/cobot_controller_manager/include/cobot_controller_manager/: single_point_trajectory_controller_handle.hpp
src/cobot_controller_manager/src/: cobot_controller_manager.cpp
src/cobot_model/: CMakeLists.txt  README.md  package.xml
src/cobot_model/doc/: cobot_modelling.ipynb
src/cobot_model/meshes/collision/: axis_and_workbench_collision.stl  axis_collision.dae  axis_collision.stl  axis_table_workbench_collision.stl  carriage_collision.dae  carriage_collision.stl  carriage_real_collision.stl  cobot_base_frame_collision.stl  finger01_collision.stl  finger01_real_collision.stl  finger02_collision.stl  finger02_real_collision.stl  gripper_frame_collision.stl  segment01_collision.stl  segment02_collision.stl  segment03_collision.stl  segment04_collision.stl  segment05_collision.stl  segment05_collision_big.stl  segment05_power_collision.stl  segment06_collision.stl  segment06_collision_small.stl  segment06_power_collision.stl  segment07_collision.stl  segment07_real_collision.stl  vacuum_gripper_down_collision.stl  vacuum_gripper_up_collision.stl
src/cobot_model/meshes/lin_axis/: axis.dae  axis.stl  carriage.dae  carriage.stl
src/cobot_model/meshes/v2_0_hull/: segment01.stl  segment01_blue.stl  segment01_grey.stl  segment01_silver.stl  segment02_black.stl  segment02_grey.stl  segment02_silver.stl  segment03.stl  segment03_black.stl  segment03_blue.stl  segment03_silver.stl  segment03_silver_2.stl  segment04_black.stl  segment04_blue.stl  segment04_combined.stl  segment04_grey.stl  segment04_silver.stl  segment05_black.stl  segment05_combined.stl  segment05_grey.stl  segment06.stl  segment06_black.stl  segment06_blue.stl  segment06_combined.stl  segment06_grey.stl  segment06_silver.stl  segment07.stl  segment07_black.stl  segment07_silver.stl
src/cobot_model/meshes/visual/: axis_and_workbench_visual.dae  axis_table_workbench_visual.dae  axis_visual.stl  carriage_real_visual.dae  carriage_real_visual.stl  carriage_visual.stl  cobot_base_frame_visual.stl  cobot_base_frame_visual_logo.dae  (+15 more)
src/cobot_model/urdf/: cobot_v2_0_tandem_hull_axis.urdf  festo_cobot_model.urdf  festo_cobot_model.urdf.xacro  gz_ros_controlls.urdf.xacro  gz_ros_controls.urdf.xacro  robot_model.urdf.xacro
src/cobot_moveit_config/: CMakeLists.txt  README.md  package.xml
src/cobot_moveit_config/config/: festo_cobot_model.srdf  joint_limits.yaml  kinematics.yaml  moveit_controller_manager.yaml  moveit_controllers.yaml  moveit_custom_controllers.yaml  ompl_planning.yaml  ompl_planning_conf.yaml  ros2_controllers.yaml  sensor_3d.yaml  sensor_3d_gazebo.yaml
src/cobot_moveit_config/launch/: custom_world.sdf  gz_demo_launch.py
src/cobot_moveit_config/rviz/: moveit.rviz
src/cobot_msgs/: CMakeLists.txt  README.md  package.xml
src/cobot_msgs/srv/: CobotApiSrv.srv
src/cobot_rviz_plugins/: CMakeLists.txt  README.md  cobot_rviz_plugins.xml  package.xml
src/cobot_rviz_plugins/include/cobot_rviz_plugins/: cobot_control_panel.hpp
src/cobot_rviz_plugins/src/: cobot_control_panel.cpp
src/cobot_trajectory_controller/: CMakeLists.txt  README.md  cobot_trajectory_controller_plugins.xml  package.xml
src/cobot_trajectory_controller/include/cobot_trajectory_controller/: cobot_trajectory_controller.hpp
src/cobot_trajectory_controller/src/: cobot_trajectory_controller.cpp
src/demo/: CMakeLists.txt  README.md  package.xml
src/demo/config/: cobot_simulated_config.yaml  pick_place_config.yaml
src/demo/launch/: game_controller.launch.py  pick_place_launch.py  rviz_demo_launch.py  simple_ik_launch.py
src/demo/meshes/: football.dae
src/demo/rviz/: demo.rviz  simple_ik.rviz
src/demo/src/: simple_ik.cpp
src/offline_hand_eye/: .gitignore  README.md  package.xml  setup.cfg  setup.py
src/offline_hand_eye/doc/: apriltag.md  tags_36h11.yaml  tags_41h12.yaml
src/offline_hand_eye/offline_hand_eye/: calib_io_utils.py  calib_publisher.py  image_to_numpy.py  record_calib_data.py  record_calib_data_gui.py
src/offline_hand_eye/scripts/: calibration_utils.py  flat_calib_pattern.ipynb  offline_hand_eye_calibration.ipynb  offline_hand_eye_calibration_gui.py
src/perception_pipeline/: README.md  package.xml  setup.cfg  setup.py
src/perception_pipeline/perception_pipeline/: object_clustering.py
src/py_demo/: README.md  package.xml  setup.py
src/py_demo/config/: moveit_controllers.yaml  moveit_cpp.yaml
src/py_demo/py_demo/: ik_reachable_set.py  simple_ik_fk.py
src/py_utils/: package.xml  setup.py
src/py_utils/py_utils/: launch_utils.py  planner_utils.py  visualization_utils.py
(+23 files in other folders)
