<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobot_controller_manager</name>
  <version>1.0.0</version>
  <description>Custom MoveIt Controller Manager and Controller Handle for Single Point Trajectory forwarding.</description>
  <maintainer email="robgineer@gmail.com">Robert Harbach</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>moveit_core</depend>
  <depend>pluginlib</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>control_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <pluginlib plugin="${prefix}/cobot_controller_plugins.xml"/>
  </export>

</package>
