<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobot_msgs</name>
  <version>1.0.0</version>
  <description>Custom service definitions for Cobot control</description>
  <maintainer email="robgineer@gmail.com">rharbach</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>
  <depend>rosidl_default_runtime</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>


  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
