<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cobot_rviz_plugins</name>
  <version>1.0.0</version>
  <description>Rviz plugins for Cobot visualization and control.</description>
  <maintainer email="robgineer@gmail.com">Robert Harbach</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>std_srvs</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>cobot_msgs</depend>

  <export>
    <pluginlib plugin="${prefix}/cobot_rviz_plugins.xml"/>
    <build_type>ament_cmake</build_type>
  </export>
</package>
