<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>demo</name>
  <version>0.0.0</version>
  <description>Demo implementations for Cobot control with MoveIt2 / ROS</description>

  <maintainer email="Robert.Harbach@hs-esslingen.de">Robert Harbach</maintainer>
  <maintainer email="robgineer@gmail.com">Robert Harbach</maintainer>

  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cobot_model</depend>
  <depend>cobot_moveit_config</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>moveit_task_constructor</depend>
  <depend>moveit_visual_tools</depend>
  <depend>geometry_msgs</depend>
  <depend>rviz_visual_tools</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
