<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>py_demo</name>
  <version>1.0.0</version>
  <description>Simple IK / FK demo using the MoveIt2 Python API</description>
  <maintainer email="robgineer@gmail.com">Robert Harbach</maintainer>
  <maintainer email="Robert.Harbach@hs-esslingen.de">Robert Harbach</maintainer>

  <license>BSD-3-Clause</license>

  <depend>moveit_core</depend>
  <depend>moveit_configs_utils</depend>
  <depend>moveit_planning</depend>
  <depend>moveit_msgs</depend>
  <depend>shape_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
